--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Insights</title>
-    
+
     {% if GOOGLE_ANALYTICS_ID %}
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_ANALYTICS_ID }}"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_ANALYTICS_ID }}"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', '{{ GOOGLE_ANALYTICS_ID }}');
+      gtag("config", "{{ GOOGLE_ANALYTICS_ID }}");
     </script>
     {% endif %}
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,6 +29,11 @@
     />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     {% load static %}
+    <link
+      rel="icon"
+      type="image/png"
+      href="{% static 'musicinsights/img/favicon.png' %}"
+    />
     <link rel="stylesheet" href="{% static 'musicinsights/css/style.css' %}" />
   </head>
 
